# Application_for_analysis_of_banking_operations

./: README.md  config.py  pyproject.toml
data/: Траты_по_категориям.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_utils.py  test_viiews.py
