[tool.poetry]
name = "course-work-1"
version = "0.1.0"
description = ""
authors = ["Aleksey40000 <alekseyfilippov9392@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
flake8 = "^7.2.0"
black = "^25.1.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'